# Scout

./: .env.example  .gitignore  PITCH.md  README.md  pyproject.toml
docs/: index.html
scout/: __init__.py  cli.py  config.py  models.py
scout/agents/: __init__.py  reporter_agent.py  scout_agent.py
scout/ai/: __init__.py  client.py  prompts.py
scout/scanners/: __init__.py  base.py  deps.py  headers.py  injection.py  secrets.py
tests/: conftest.py
tests/fixtures/: has_injection.js  has_secrets.py  safe_app.py
tests/test_scanners/: test_injection.py  test_secrets.py
